--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
-.App {
-  text-align: center;
+* {
+	box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+	margin: 0;
+	padding: 0;
+	font-family: 'Poppins', 'sans-serif';
+	background-color: #0b2434;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+main {
+	background-color: #f5f5f5;
+	height: 100vh;
+	margin: 2rem 1.5rem;
+	border-radius: 0.5rem;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.dice-wrapper {
+	margin-top: 3rem;
+	display: grid;
+	grid-template: auto auto / repeat(2, 1fr);
+	gap: 2rem;
 }
 
-.App-link {
-  color: #61dafb;
+.die {
+	height: 4.2rem;
+	width: 4.2rem;
+	/* margin: 1rem; */
+	border-radius: 0.5rem;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.468);
+	cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.die--text {
+	font-size: 2rem;
+}
+
+.roll-button {
+	background-color: #038ce2;
+	padding: 1rem 3rem;
+	border-radius: 5px;
+	border: none;
+	cursor: pointer;
+}
+
+.roll-button:focus {
+	outline: none;
+}
+
+.roll-button:active {
+	box-shadow: inset 5px 5px 10px -5px rgba(0, 0, 0, 0.7);
+}
+
+.roll--text {
+	font-weight: 500;
+	color: #fff;
+	font-size: 1.5rem;
+	font-weight: 600;
 }
