--- a/src/App.css
+++ b/src/App.css
@@ -12,19 +12,37 @@ body {
 main {
 	background-color: #f5f5f5;
 	height: 100vh;
-	margin: 2rem 1.5rem;
+	margin: 1.5rem 1rem;
 	border-radius: 0.5rem;
+}
+
+.mainGame {
+	height: inherit;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-around;
+	justify-content: space-evenly;
 	align-items: center;
 }
 
+.tenzi--title {
+	font-size: 2rem;
+	margin: 0;
+	text-align: center;
+}
+
+.tenzi--instructions {
+	margin: 0;
+	padding: 0rem 1rem 0.3rem 1rem;
+	font-family: 'Inter', sans-serif;
+	font-weight: 400;
+	font-size: 1rem;
+	text-align: center;
+}
+
 .dice-wrapper {
-	margin-top: 3rem;
 	display: grid;
 	grid-template: auto auto / repeat(2, 1fr);
-	gap: 2rem;
+	gap: 1.5rem;
 }
 
 .die {
@@ -43,12 +61,14 @@ main {
 	font-size: 2rem;
 }
 
-.roll-button {
+.button {
 	background-color: #038ce2;
-	padding: 1rem 3rem;
+	width: 10rem;
+	height: 3.5rem;
 	border-radius: 5px;
 	border: none;
 	cursor: pointer;
+	margin-top: 0.6rem;
 }
 
 .roll-button:focus {
@@ -64,4 +84,73 @@ main {
 	color: #fff;
 	font-size: 1.5rem;
 	font-weight: 600;
+}
+
+.face {
+	display: grid;
+	grid-template-areas:
+		'a . c'
+		'e g f'
+		'd . b';
+
+	height: 4.2rem;
+	width: 4.2rem;
+	/* margin: 1rem; */
+	/* border-radius: 0.5rem; */
+	padding: 0.6rem 0.3rem 0.6rem 0.3rem;
+	cursor: pointer;
+
+	background-color: #e7e7e7;
+	box-shadow: inset 0 3px white, inset 0 -4px #bbb, inset 3px 0 #d7d7d7, inset -3px 0 #d7d7d7;
+	border-radius: 10%;
+}
+
+.pip {
+	display: block;
+	align-self: center;
+	justify-self: center;
+	width: 13px;
+	height: 13px;
+	border-radius: 50%;
+	background-color: rgb(32, 0, 0);
+	box-shadow: inset 0 3px rgb(0, 0, 0), inset 0 -3px rgb(86, 86, 86);
+}
+
+.pip:nth-child(2) {
+	grid-area: b;
+}
+.pip:nth-child(3) {
+	grid-area: c;
+}
+.pip:nth-child(4) {
+	grid-area: d;
+}
+.pip:nth-child(5) {
+	grid-area: e;
+}
+.pip:nth-child(6) {
+	grid-area: f;
+}
+/* This selects the last pip of odd-valued dice (1, 3, 5) and positions the pip in the center */
+.pip:nth-child(odd):last-child {
+	grid-area: g;
+}
+
+.gameFinished {
+	height: inherit;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-evenly;
+	text-align: center;
+}
+
+.gameFinished--Congratz {
+	font-size: 2.2rem;
+	font-weight: 600;
+}
+
+.gameFinished--message {
+	font-size: 1.5rem;
+	padding: 0 1rem;
 }
